# neural-amp-modeler-lv2

./: CMakeLists.txt  Makefile  manifest.json
presets/: default.json  fen-deluxe-reverb-65.json  fen-deluxe-reverb-no-cab.json  fen-super-reverb.json  gib-ga200-rhythm-king.json  trayn-mk3-boost.json  trayn-mk3.json  traynor-ygl3-alt.json  traynor-ygl3-boost.json  traynor-ygl3.json  vx-ac304-1961.json
resources/: neural_amp_modeler.ttl.in
src/: CMakeLists.txt  nam_plugin.cpp  nam_plugin.h  pick_processor.h  tonestack.h
tests/: test_pick_processor.cpp
ui/: .gitignore  NAMDevice.vue  NeuralTube.vue
